--- a/learning/src/index.css
+++ b/learning/src/index.css
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 *{
-  background-color: #6a6a6a;
   color: aliceblue;
+}
+
+.japones{
+  font-family: 'Noto Serif JP', serif;
 }
